--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     background-color: rgb(33, 33, 33);
     color: white;
-    font-family: "Andale Mono", monospace;
+    font-family: Arial
     font-size: 15
 
     
