--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 body {
     background-color: rgb(33, 33, 33);
     color: white;
-    font-family: Arial
-    font-size: 15
+    font-size: 15;
+    font-family: "Arial"
+
 
     
 }
